# skill-manager-gui

./: .gitignore  BUGFIX_PLAN.md  BUGFIX_PLAN_v0.2.2.md  CONTRIBUTING.md  Cargo.toml  GITFLOW_QUICKREF.md  README-zh.md  README.md  RELEASE_ASSESSMENT.md  TEST_REPORT.md  bug_reproduce.md  components.json  package.json  playwright.config.ts  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: BRANCH_PROTECTION.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: feature.md  release.md
.github/workflows/: branch-protection.yml  ci.yml  pr-check.yml  release.yml
design-system/agent-skills-manager/: MASTER.md
docs/: BUGFIX_REPORT.md  EVALUATION_RESPONSE.md  PERFORMANCE.md  PRD-agent-skills-manager.md  SECURITY_REVIEW.md  TEST_CHECKLIST.md  TEST_REPORT.md  TEST_REPORT_DEV.md
docs/plans/: 2025-03-18-agent-skills-manager.md  2025-03-18-settings-and-conflicts.md
e2e/: select-and-show.spec.ts  smoke.spec.ts
scripts/: check-git-flow.sh  merge-to-dev.sh
src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: file_operations.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: config_commands.rs  dialog_commands.rs  file_commands.rs  mod.rs  scan_commands.rs  sync_commands.rs
src-tauri/src/modules/: agent_discovery.rs  config_manager.rs  file_operations.rs  mod.rs  skills_scanner.rs  sync_engine.rs
src-ui/: index.html
src-ui/e2e/: README.md  agents.spec.ts  full_integration_test.py  self_test.py  settings.spec.ts  simple_test.py
src-ui/src/: App.tsx  index.css  main.tsx
src-ui/src/components/: ErrorBoundary.tsx
src-ui/src/hooks/: useSync.ts  (+6 more)
src/commands/: file_commands.rs  mod.rs  sync_commands.rs
src/modules/: agent_discovery.rs  mod.rs  skills_scanner.rs  sync_engine.rs
tests/: file_operations_tests.rs  load_test.py
(+58 files in other folders)
