[package]
name = "agent-skills-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
