[package]
name = "skilltoon"
version = "0.1.0"
description = "Skilltoon: a unified GUI for managing AI Agent Skills across multiple agents"
authors = ["sebswho"]
edition = "2021"
license = "LGPL-3.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
walkdir = "2.4"
dirs = "5.0"

[[bench]]
name = "file_operations"
harness = false

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
